docker-pocsag-build.log
#0 building with "default" instance using docker driver

#1 [internal] load build definition from Dockerfile
#1 transferring dockerfile: 443B done
#1 WARN: FromPlatformFlagConstDisallowed: FROM --platform flag should not use constant value "amd64" (line 1)
#1 DONE 0.0s

#2 [auth] library/archlinux:pull token for registry-1.docker.io
#2 DONE 0.0s

#3 [internal] load metadata for docker.io/library/archlinux:latest
#3 DONE 0.1s

#4 [internal] load .dockerignore
#4 transferring context: 2B done
#4 DONE 0.0s

#5 [ 1/10] FROM docker.io/library/archlinux:latest@sha256:c136b06a4f786b84c1cc0d2494fabdf9be8811d15051cd4404deb5c3dc0b2e57
#5 DONE 0.0s

#6 [internal] load build context
#6 transferring context: 1.14MB 0.2s done
#6 DONE 0.3s

#7 [ 6/10] RUN pacman -Syyu python-pip --noconfirm
#7 CACHED

#8 [ 7/10] RUN pacman -Syyu python-crcmod --noconfirm
#8 CACHED

#9 [ 3/10] RUN pacman -Syyu arm-none-eabi-gcc --noconfirm
#9 CACHED

#10 [ 2/10] RUN pacman -Syyu base-devel --noconfirm
#10 CACHED

#11 [ 4/10] RUN pacman -Syyu arm-none-eabi-newlib --noconfirm
#11 CACHED

#12 [ 5/10] RUN pacman -Syyu git --noconfirm
#12 CACHED

#13 [ 8/10] WORKDIR /app
#13 CACHED

#14 [ 9/10] COPY . .
#14 DONE 2.7s

#15 [10/10] RUN git submodule update --init --recursive
#15 DONE 0.4s

#16 exporting to image
#16 exporting layers
#16 exporting layers 3.5s done
#16 writing image sha256:76ce3da74931987230fa2d87f285dd025492bc645f5bb7de562686099935df4a done
#16 naming to docker.io/library/uvk5 done
#16 DONE 3.6s

 [33m1 warning found (use docker --debug to expand):
[0m - FromPlatformFlagConstDisallowed: FROM --platform flag should not use constant value "amd64" (line 1)
CC external/printf/printf.c
CC init.c
CC driver/adc.c
CC driver/backlight.c
CC driver/bk4819.c
CC driver/eeprom.c
CC driver/gpio.c
CC driver/i2c.c
CC driver/keyboard.c
CC driver/spi.c
CC driver/st7565.c
CC driver/system.c
CC driver/systick.c
CC app/action.c
CC app/app.c
CC app/chFrScanner.c
CC app/common.c
CC app/dtmf.c
CC app/generic.c
CC app/main.c
CC app/menu.c
CC app/scanner.c
CC audio.c
CC bitmaps.c
CC board.c
CC dcs.c
CC font.c
CC frequencies.c
CC functions.c
CC helper/battery.c
CC helper/boot.c
CC misc.c
CC radio.c
CC scheduler.c
CC settings.c
CC ui/battery.c
CC ui/helper.c
CC ui/inputbox.c
CC ui/main.c
CC ui/menu.c
CC ui/scanner.c
CC ui/status.c
CC ui/ui.c
CC ui/welcome.c
CC version.c
CC main.c
CC driver/aes.c
CC driver/bk1080.c
CC driver/crc.c
CC driver/uart.c
CC app/aircopy.c
CC app/fm.c
CC app/spectrum.c
CC app/uart.c
CC app/messenger.c
app/messenger.c: In function 'MSG_SendPOCSAG':
app/messenger.c:313:19: error: implicit declaration of function 'POCSAG_EncodeMessage' [-Wimplicit-function-declaration]
  313 |         int len = POCSAG_EncodeMessage(pagerAddress, message, buf, sizeof(buf));
      |                   ^~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:474: _build/app/messenger.o] Error 1
